drkns 08.08.2019 19:39:35 +0100 - build 5448

1. 0003717: #5411 should be optional

2. 0003730: Неверные права доступа к файлу, сохранённому из Редактора

3. Поддержка кучи новых reparse tags.

4. Немного чёрной магии, чтобы VS2019 билд мог запускаться в Win2k.

drkns 07.08.2019 22:16:22 +0100 - build 5447

1. Уточнение 5418.

drkns 07.08.2019 20:01:30 +0100 - build 5446

1. 0003729: Зашифрованный файл (+S+E) в папке (-E) сохраняется редактором как незашифрованный

2. То же самое в копировании.

3. Убрано немного копипасты.

drkns 07.08.2019 00:44:00 +0100 - build 5445

1. Hex-viewer в режиме UTF-16 показывает hex как везде - байтами.
   Кодовая страница влияет только на отображение текстовой части.
   Было:  "0000000048: 006C 0061 007A 0079 │ 0020 0064 006F 0067  lazy dog"
   Стало: "0000000048: 6C 00 61 00 7A 00 79 00 │ 20 00 64 00 6F 00 67 00  lazy dog"

2. Уточнение 5441 - запросы повышения прав не нужны при чтении папки.

drkns 05.08.2019 23:24:36 +0100 - build 5444

1. Справка по грабберу вынесена в отдельный топик.

shmuel 04.08.2019 03:04:52 +0200 - build 5443

1. Загружаем макросы до первого обновления панелей, чтобы сразу отображались контент-колонки, заданные в макрофайлах.

drkns 02.08.2019 20:14:49 +0100 - build 5442

1. С форума: F9 -> Options -> File panel modes -> Ins -> crash.

drkns 02.08.2019 01:32:31 +0100 - build 5441

1. Права доступа должны корректно протаскиваться через elevation.

zg 31.07.2019 14:28:50 +0300 - build 5440

1. с форума: Косметические дефекты позиционирования в отфильтрованном списке.

drkns 31.07.2019 01:27:30 +0100 - build 5439

1. Продолжение 5438 - уточнения обработки ошибок.

drkns 31.07.2019 00:47:04 +0100 - build 5438

1. В копировании неадекватно работала опция "Inherit access rights": копирование прав родительской папки - это ни разу не "наследование". Причём так было всегда.

2. Всё остальное там же, связанное с правами доступа, тоже не отличалось адекватностью.

drkns 29.07.2019 22:50:07 +0100 - build 5437
