@@ -3,6 +3,15 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 09.08.2019 22:23:24 +0100 - build 5449
+
+1. Drop some existing Windows 10 workarounds and add some new (#2366).
+   Every day I love this OS more and more.
+
+2. Correction of 5433 for those who want to press buttons fancifully.
+
+3. Warnings.
+
 drkns 08.08.2019 19:39:35 +0100 - build 5448
 
 1. 0003717: #5411 should be optional
