@@ -1,3 +1,12 @@
+drkns 09.08.2019 22:23:24 +0100 - build 5449
+
+1. Удаляем одни костыли для Windows 10 и добавляем другие (#2366).
+   Я люблю эту ОС всё больше и больше с каждым днём.
+
+2. Уточнение 5433 для желающих вычурно нажимать кнопки.
+
+3. Warnings.
+
 drkns 08.08.2019 19:39:35 +0100 - build 5448
 
 1. 0003717: #5411 should be optional
